--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ jobs:
     - task: UsePythonVersion@0
     - bash: |
         set -ex
-        python scripts/updatelib.py
+        python dev/updatelib.py
         python -m pip install --upgrade pip
         python -m pip install --upgrade cibuildwheel==1.12.0
         CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir wheelhouse .
@@ -45,7 +45,7 @@ jobs:
     - task: UsePythonVersion@0
     - bash: |
         set -ex
-        python scripts/updatelib.py
+        python dev/updatelib.py
         python -m pip install --upgrade pip
         # python -m pip install --upgrade cibuildwheel==1.12.0
         # CIBW_BUILD="cp35-*" cibuildwheel --platform macos --output-dir wheelhouse .
@@ -60,7 +60,7 @@ jobs:
     - task: UsePythonVersion@0
     - bash: |
         set -ex
-        python scripts/updatelib.py
+        python dev/updatelib.py
         python -m pip install --upgrade pip
         python -m pip install --upgrade cibuildwheel==1.12.0
         CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir wheelhouse .
