--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.12.0
         env:
-          CIBW_ARCHS_LINUX: auto # aarch64 ppc64le
+          CIBW_ARCHS_LINUX: auto aarch64 ppc64le
           CIBW_ARCHS_MACOS: x86_64 universal2
           CIBW_SKIP: pp* cp27-* *_i686 *-win32 *musllinux*
           CIBW_TEST_COMMAND: python -m amplpy.tests
