--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,68 +4,99 @@ variables:
   CIBW_TEST_COMMAND: python -m amplpy.tests
   CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs pandas numpy
 
-jobs:
-- job: docs
-  pool: {vmImage: 'Ubuntu-20.04'}
-  steps:
-    - task: UsePythonVersion@0
-    - bash: |
-        set -ex
-        python -m pip install --upgrade pip
-        python dev/updatelib.py
-        python setup.py sdist -d upload
-        pip install .
-        cd docs
-        pip install -r requirements-dev.txt
-        make html
-        cd ..
-        mkdir -p upload/doc
-        cp -r docs/build/html upload/doc/python
-      displayName: Build documentation
-    - task: PublishBuildArtifacts@1
-      inputs: {pathtoPublish: 'upload'}
-- job: manylinux
-  pool: {vmImage: 'Ubuntu-20.04'}
-  steps:
-    - task: UsePythonVersion@0
-    - bash: |
-        set -ex
-        python dev/updatelib.py
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade cibuildwheel==1.12.0
-        CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir wheelhouse .
-        python -m pip install --upgrade cibuildwheel==2.12.0
-        cibuildwheel --platform linux --output-dir wheelhouse .
-      displayName: Build wheels
-    - task: PublishBuildArtifacts@1
-      inputs: {pathtoPublish: 'wheelhouse'}
-- job: macos
-  pool: {vmImage: 'macos-latest'}
-  steps:
-    - task: UsePythonVersion@0
-    - bash: |
-        set -ex
-        python dev/updatelib.py
-        python -m pip install --upgrade pip
-        # python -m pip install --upgrade cibuildwheel==1.12.0
-        # CIBW_BUILD="cp35-*" cibuildwheel --platform macos --output-dir wheelhouse .
-        python -m pip install --upgrade cibuildwheel==2.12.0
-        cibuildwheel --platform macos --output-dir wheelhouse .
-      displayName: Build wheels
-    - task: PublishBuildArtifacts@1
-      inputs: {pathtoPublish: 'wheelhouse'}
-- job: windows
-  pool: {vmImage: 'windows-2022'}
-  steps:
-    - task: UsePythonVersion@0
-    - bash: |
-        set -ex
-        python dev/updatelib.py
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade cibuildwheel==1.12.0
-        CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir wheelhouse .
-        python -m pip install --upgrade cibuildwheel==2.12.0
-        cibuildwheel --platform windows --output-dir wheelhouse .
-      displayName: Build wheels
-    - task: PublishBuildArtifacts@1
-      inputs: {pathtoPublish: 'wheelhouse'}
+stages:
+- stage: native
+  displayName: 'Build native'
+  jobs:
+  - job: docs
+    pool: {vmImage: 'Ubuntu-20.04'}
+    steps:
+      - task: UsePythonVersion@0
+      - bash: |
+          set -ex
+          python -m pip install --upgrade pip
+          python dev/updatelib.py
+          python setup.py sdist -d upload
+          pip install .
+          cd docs
+          pip install -r requirements-dev.txt
+          make html
+          cd ..
+          mkdir -p upload/doc
+          cp -r docs/build/html upload/doc/python
+        displayName: Build documentation
+      - task: PublishBuildArtifacts@1
+        inputs: {pathtoPublish: 'upload'}
+  - job: manylinux
+    pool: {vmImage: 'Ubuntu-20.04'}
+    steps:
+      - task: UsePythonVersion@0
+      - bash: |
+          set -ex
+          python dev/updatelib.py
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade cibuildwheel==1.12.0
+          CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir wheelhouse .
+          python -m pip install --upgrade cibuildwheel==2.12.0
+          cibuildwheel --platform linux --output-dir wheelhouse .
+        displayName: Build wheels
+      - task: PublishBuildArtifacts@1
+        inputs: {pathtoPublish: 'wheelhouse'}
+  - job: macos
+    pool: {vmImage: 'macos-latest'}
+    steps:
+      - task: UsePythonVersion@0
+      - bash: |
+          set -ex
+          python dev/updatelib.py
+          python -m pip install --upgrade pip
+          # python -m pip install --upgrade cibuildwheel==1.12.0
+          # CIBW_BUILD="cp35-*" cibuildwheel --platform macos --output-dir wheelhouse .
+          python -m pip install --upgrade cibuildwheel==2.12.0
+          cibuildwheel --platform macos --output-dir wheelhouse .
+        displayName: Build wheels
+      - task: PublishBuildArtifacts@1
+        inputs: {pathtoPublish: 'wheelhouse'}
+  - job: windows
+    pool: {vmImage: 'windows-2022'}
+    steps:
+      - task: UsePythonVersion@0
+      - bash: |
+          set -ex
+          python dev/updatelib.py
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade cibuildwheel==1.12.0
+          CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir wheelhouse .
+          python -m pip install --upgrade cibuildwheel==2.12.0
+          cibuildwheel --platform windows --output-dir wheelhouse .
+        displayName: Build wheels
+      - task: PublishBuildArtifacts@1
+        inputs: {pathtoPublish: 'wheelhouse'}
+
+- stage: qemu
+  displayName: 'Build with QEMU'
+  jobs:
+  - job: qemu
+    pool: {vmImage: 'Ubuntu-20.04'}
+    strategy:
+      matrix:
+        aarch64:
+          ARCH: aarch64
+        ppc64le:
+          ARCH: ppc64le
+    variables:
+      CIBW_ARCHS_LINUX: $(ARCH)
+      CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base
+    steps:
+      - task: UsePythonVersion@0
+      - bash: docker run --rm --privileged multiarch/qemu-user-static --persistent yes
+        displayName: Configure qemu
+      - bash: |
+          set -ex
+          python dev/updatelib.py
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade cibuildwheel==2.12.0
+          cibuildwheel --platform linux --output-dir wheelhouse .
+        displayName: Build wheels
+      - task: PublishBuildArtifacts@1
+        inputs: {pathtoPublish: 'wheelhouse'}
