--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -20,12 +20,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up QEMU
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: all
-
       - name: Download libampl
         run: python dev/updatelib.py
 
@@ -43,17 +37,18 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_with_qemu:
-    needs: build_native
-    name: Build wheels using QEMU for ${{ matrix.arch }}
+    if: github.ref == 'refs/heads/release'
+    name: Build ${{ matrix.build }} wheels for ${{ matrix.arch }}
+    #needs: build_native
     strategy:
       matrix:
         arch: [aarch64, ppc64le]
+        build: [cp36-*, cp37-*, cp38-*, cp39-*, cp310-*, cp311-*]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
 
       - name: Set up QEMU
-        if: runner.os == 'Linux'
         uses: docker/setup-qemu-action@v2
         with:
           platforms: all
@@ -66,6 +61,7 @@ jobs:
         env:
           CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_ARCHS_MACOS: ${{ env.CIBW_ARCHS_MACOS }}
+          CIBW_BUILD: ${{ matrix.build }}
           CIBW_SKIP: ${{ env.CIBW_SKIP }}
           CIBW_TEST_COMMAND: ${{ env.CIBW_TEST_COMMAND }}
           CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base
