--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -24,7 +24,7 @@ jobs:
         run: python3 dev/updatelib.py
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.12.0
+        uses: pypa/cibuildwheel@v2.15.0
         env:
           CIBW_ARCHS_LINUX: ${{ env.CIBW_ARCHS_LINUX }}
           CIBW_ARCHS_MACOS: ${{ env.CIBW_ARCHS_MACOS }}
@@ -37,7 +37,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_with_qemu:
-    if: github.ref == 'refs/heads/release'
+    #if: github.ref == 'refs/heads/release'
     name: Build ${{ matrix.build }} wheels for ${{ matrix.arch }}
     #needs: build_native
     strategy:
@@ -57,7 +57,7 @@ jobs:
         run: python3 dev/updatelib.py
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.12.0
+        uses: pypa/cibuildwheel@v2.15.0
         env:
           CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_ARCHS_MACOS: ${{ env.CIBW_ARCHS_MACOS }}
