--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ stages:
           python dev/updatelib.py
           python -m pip install --upgrade cibuildwheel==1.12.0
           CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir wheelhouse .
-          python -m pip install --upgrade cibuildwheel==2.12.0
+          python -m pip install --upgrade cibuildwheel==2.15.0
           cibuildwheel --platform linux --output-dir wheelhouse .
         displayName: Build wheels
       - task: PublishBuildArtifacts@1
@@ -49,7 +49,7 @@ stages:
           python dev/updatelib.py
           # python -m pip install --upgrade cibuildwheel==1.12.0
           # CIBW_BUILD="cp35-*" cibuildwheel --platform macos --output-dir wheelhouse .
-          python -m pip install --upgrade cibuildwheel==2.12.0
+          python -m pip install --upgrade cibuildwheel==2.15.0
           cibuildwheel --platform macos --output-dir wheelhouse .
         displayName: Build wheels
       - task: PublishBuildArtifacts@1
@@ -63,7 +63,7 @@ stages:
           python dev/updatelib.py
           python -m pip install --upgrade cibuildwheel==1.12.0
           CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir wheelhouse .
-          python -m pip install --upgrade cibuildwheel==2.12.0
+          python -m pip install --upgrade cibuildwheel==2.15.0
           cibuildwheel --platform windows --output-dir wheelhouse .
         displayName: Build wheels
       - task: PublishBuildArtifacts@1
@@ -94,6 +94,9 @@ stages:
         aarch64 cp311:
           CIBW_BUILD: cp311-*
           CIBW_ARCHS_LINUX: aarch64
+        aarch64 cp312:
+          CIBW_BUILD: cp312-*
+          CIBW_ARCHS_LINUX: aarch64
         ppc64le cp36:
           CIBW_BUILD: cp36-*
           CIBW_ARCHS_LINUX: ppc64le
@@ -112,6 +115,9 @@ stages:
         ppc64le cp311:
           CIBW_BUILD: cp311-*
           CIBW_ARCHS_LINUX: ppc64le
+        ppc64le cp312:
+          CIBW_BUILD: cp312-*
+          CIBW_ARCHS_LINUX: ppc64le
     variables:
       CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base
     steps:
@@ -121,7 +127,7 @@ stages:
       - bash: |
           set -ex
           python dev/updatelib.py
-          python -m pip install --upgrade cibuildwheel==2.12.0
+          python -m pip install --upgrade cibuildwheel==2.15.0
           cibuildwheel --platform linux --output-dir wheelhouse .
         displayName: Build wheels
       - task: PublishBuildArtifacts@1
