--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -24,7 +24,7 @@ jobs:
         run: python3 dev/updatelib.py
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.15.0
+        uses: pypa/cibuildwheel@v2.12.0
         env:
           CIBW_ARCHS_LINUX: ${{ env.CIBW_ARCHS_LINUX }}
           CIBW_ARCHS_MACOS: ${{ env.CIBW_ARCHS_MACOS }}
@@ -43,7 +43,7 @@ jobs:
     strategy:
       matrix:
         arch: [aarch64, ppc64le]
-        build: [cp36-*, cp37-*, cp38-*, cp39-*, cp310-*, cp311-*]
+        build: [cp36-*, cp37-*, cp38-*, cp39-*, cp310-*, cp311-*, cp312-*]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
