Docs: use ampl-sphinx-theme directly from github

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
 amplpy==0.12.1
-ampl-sphinx-theme
+ampl-sphinx-theme @ git+https://github.com/ampl/ampl.github.io.git#subdirectory=ampl-sphinx-theme
 sphinx==4.2.0
 myst_parser>=0.17.0
 sphinx_design==0.3.0
