Azure pipelines: fix type in the configuration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ stages:
 - stage: qemu
   displayName: 'Build with QEMU'
   jobs:
-  - job: qemu aarch64
+  - job: qemu
     pool: {vmImage: 'Ubuntu-20.04'}
     strategy:
       matrix:
