--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -46,6 +46,7 @@ jobs:
     strategy:
       matrix:
         arch: [aarch64, ppc64le]
+        build: [cp36-*, cp37-*, cp38-*, cp39-*, cp310-*, cp311-*, cp312-*, cp313-*]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
@@ -63,11 +64,12 @@ jobs:
         env:
           CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_ARCHS_MACOS: ${{ env.CIBW_ARCHS_MACOS }}
+          CIBW_BUILD: ${{ matrix.build }}
           CIBW_SKIP: ${{ env.CIBW_SKIP }}
           CIBW_TEST_COMMAND: ${{ env.CIBW_TEST_COMMAND }}
           CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base
 
       - uses: actions/upload-artifact@v4
         with:
-          name: artifact-${{ matrix.arch }}
+          name: artifact-${{ matrix.build }}-${{ matrix.arch }}
           path: ./wheelhouse/*.whl
