--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -71,5 +71,5 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: artifact-${{ matrix.build }}-${{ matrix.arch }}
+          name: artifact-${{ matrix.arch }}-${{ matrix.build//\*/\\* }}
           path: ./wheelhouse/*.whl
