--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -69,10 +69,10 @@ jobs:
           CIBW_TEST_COMMAND: ${{ env.CIBW_TEST_COMMAND }}
           CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base
 
-      - name: Escape build variable
+      - name: Remove '-*' from build variable
         run: |
-          # Replace '*' with '' and store it in an environment variable
-          ESCAPED_BUILD=$(echo "${{ matrix.build }}" | sed 's/\*//g')
+          # Remove '-*' from the build variable
+          ESCAPED_BUILD=$(echo "${{ matrix.build }}" | sed 's/-\*//g')
           echo "ESCAPED_BUILD=$ESCAPED_BUILD" >> $GITHUB_ENV
 
       - uses: actions/upload-artifact@v4
