--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -7,6 +7,7 @@ env:
   CIBW_ARCHS_MACOS: x86_64 universal2
   CIBW_BEFORE_BUILD: pip install cython
   CIBW_SKIP: pp* *_i686 *-win32 *musllinux*
+  CIBW_ENABLE: cpython-freethreading # Include free-threaded support
   CIBW_TEST_COMMAND: python -m amplpy.tests 
   CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs pandas numpy
 
