--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -32,6 +32,7 @@ jobs:
           CIBW_ARCHS_MACOS: ${{ env.CIBW_ARCHS_MACOS }}
           CIBW_BEFORE_BUILD: ${{ env.CIBW_BEFORE_BUILD }}
           CIBW_SKIP: ${{ env.CIBW_SKIP }}
+          CIBW_ENABLE: ${{ env.CIBW_ENABLE }}
           CIBW_TEST_COMMAND: ${{ env.CIBW_TEST_COMMAND }}
           CIBW_TEST_REQUIRES: ${{ env.CIBW_TEST_REQUIRES }}
 
@@ -48,7 +49,7 @@ jobs:
       matrix:
         arch: [aarch64, ppc64le]
         build: [cp36-*, cp37-*, cp38-*, cp39-*, cp310-*, cp311-*, cp312-*, cp313-*]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
