--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -47,7 +47,7 @@ jobs:
     #needs: build_native
     strategy:
       matrix:
-        arch: [aarch64, ppc64le]
+        arch: [aarch64]
         build: [cp36-*, cp37-*, cp38-*, cp39-*, cp310-*, cp311-*, cp312-*, cp313-*]
     runs-on: ubuntu-24.04
     steps:
