--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is building "${{ github.ref_name }}"
 on: [push]
 
 env:
-  CIBW_ARCHS_LINUX: auto
+  CIBW_ARCHS_LINUX: auto aarch64
   CIBW_ARCHS_MACOS: x86_64 universal2
   CIBW_BEFORE_BUILD: pip install cython
   CIBW_SKIP: pp* *_i686 *-win32 *musllinux*
