--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is building "${{ github.ref_name }}"
 on: [push]
 
 env:
-  CIBW_ARCHS_LINUX: auto aarch64
+  CIBW_ARCHS_LINUX: auto
   CIBW_ARCHS_MACOS: x86_64 universal2
   CIBW_BEFORE_BUILD: pip install cython
   CIBW_SKIP: pp* *_i686 *-win32 *musllinux*
@@ -56,7 +56,10 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: all
+          # This should be temporary
+          # xref https://github.com/docker/setup-qemu-action/issues/188
+          # xref https://github.com/tonistiigi/binfmt/issues/215
+          image: tonistiigi/binfmt:qemu-v8.1.5
 
       - name: Download libampl
         run: python3 dev/updatelib.py
