--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -5,7 +5,7 @@ on: [push]
 env:
   CIBW_ARCHS_LINUX: auto
   CIBW_ARCHS_MACOS: x86_64 universal2
-  CIBW_BEFORE_BUILD: pip install cython packaging
+  CIBW_BEFORE_BUILD: pip install cython setuptools
   CIBW_SKIP: pp* *_i686 *-win32 *musllinux*
   CIBW_TEST_COMMAND: python -m amplpy.tests 
   CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs pandas numpy
@@ -57,7 +57,7 @@ jobs:
         env:
           CIBW_ARCHS_LINUX: ${{ env.CIBW_ARCHS_LINUX }}
           CIBW_ARCHS_MACOS: ${{ env.CIBW_ARCHS_MACOS }}
-          CIBW_BEFORE_BUILD: pip install cython==3.1.0a1 packaging
+          CIBW_BEFORE_BUILD: pip install cython==3.1.0a1 setuptools
           CIBW_SKIP: ${{ env.CIBW_SKIP }}
           CIBW_PRERELEASE_PYTHONS: true
           CIBW_FREE_THREADED_SUPPORT: true
