--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -48,7 +48,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2022, macos-latest]
+        os: [ubuntu-20.04, macos-latest] #windows-2022
 
     steps:
       - uses: actions/checkout@v4
