--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -5,7 +5,7 @@ on: [push]
 env:
   CIBW_ARCHS_LINUX: auto
   CIBW_ARCHS_MACOS: x86_64 universal2
-  CIBW_BEFORE_BUILD: pip install cython setuptools
+  CIBW_BEFORE_BUILD: pip install cython setuptools packaging
   CIBW_SKIP: pp* *_i686 *-win32 *musllinux*
   CIBW_TEST_COMMAND: python -m amplpy.tests
   # TODO:
