add nogil windows

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-latest] #windows-2022
+        os: [ubuntu-20.04, windows-2022, macos-latest]
 
     steps:
       - uses: actions/checkout@v4
