--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+# MacOS
+.DS_Store
+
 # Distribution / packaging
 .Python
 env/
@@ -98,7 +101,6 @@ ENV/
 /tmp
 /debug
 /notes.txt
-
 
 # Cython
 amplpy/*.c
