--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ stages:
       - bash: |
           set -ex
           python dev/updatelib.py
-          python -m pip install setuptools cython
+          python -m pip install setuptools cython==3.1.0
           python -m pip install .
           python setup.py sdist -d upload
           cd docs
