--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 variables:
-  CIBW_SKIP: pp* cp27-* *_i686 *-win32 *musllinux*
+  CIBW_SKIP: pp* cp27-* cp36-* *_i686 *-win32 *musllinux*
   CIBW_ARCHS_MACOS: x86_64 universal2
   CIBW_TEST_COMMAND: python -m amplpy.tests
   CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs ampl_module_gurobi pandas numpy
@@ -73,10 +73,6 @@ stages:
     pool: {vmImage: 'Ubuntu-22.04'}
     strategy:
       matrix:
-        aarch64 cp36:
-          CIBW_BUILD: cp36-*
-          CIBW_ARCHS_LINUX: aarch64
-          CIBW_TEST_REQUIRES: $(CIBW_TEST_REQUIRES_AARCH64)
         aarch64 cp37:
           CIBW_BUILD: cp37-*
           CIBW_ARCHS_LINUX: aarch64
