--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -48,7 +48,7 @@ jobs:
     strategy:
       matrix:
         arch: [aarch64]
-        build: [cp36-*, cp37-*, cp38-*, cp39-*, cp310-*, cp311-*, cp312-*, cp313-*]
+        build: [cp38-*, cp39-*, cp310-*, cp311-*, cp312-*, cp313-*]
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
