--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,8 @@ stages:
           python -m pip install --upgrade cibuildwheel==2.21.3
           cibuildwheel --platform linux --output-dir wheelhouse .
         displayName: Build wheels
+        env:
+          AMPLKEY_UUID: $(AMPLKEY_UUID)
       - task: PublishBuildArtifacts@1
         inputs: {pathtoPublish: 'wheelhouse'}
   - job: macos
@@ -51,6 +53,8 @@ stages:
           python -m pip install --upgrade cibuildwheel==2.21.3
           cibuildwheel --platform macos --output-dir wheelhouse .
         displayName: Build wheels
+        env:
+          AMPLKEY_UUID: $(AMPLKEY_UUID)
       - task: PublishBuildArtifacts@1
         inputs: {pathtoPublish: 'wheelhouse'}
   - job: windows
@@ -64,6 +68,8 @@ stages:
           python -m pip install --upgrade cibuildwheel==2.21.3
           cibuildwheel --platform windows --output-dir wheelhouse .
         displayName: Build wheels
+        env:
+          AMPLKEY_UUID: $(AMPLKEY_UUID)
       - task: PublishBuildArtifacts@1
         inputs: {pathtoPublish: 'wheelhouse'}
 
