--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -6,7 +6,7 @@ env:
   CIBW_ARCHS_LINUX: auto
   CIBW_ARCHS_MACOS: x86_64 universal2
   CIBW_BEFORE_BUILD: pip install cython==3.1.0
-  CIBW_SKIP: pp* cp36-* cp37-* *_i686 *-win32 *musllinux*
+  CIBW_SKIP: pp* cp36-* cp37-* cp38-* *_i686 *-win32 *musllinux*
   CIBW_ENABLE: cpython-freethreading # Include free-threaded support
   CIBW_TEST_COMMAND: python -m amplpy.tests 
   CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs pandas numpy nanoarrow pyarrow polars
@@ -48,7 +48,7 @@ jobs:
     strategy:
       matrix:
         arch: [aarch64]
-        build: [cp38-*, cp39-*, cp310-*, cp311-*, cp312-*, cp313-*]
+        build: [cp39-*, cp310-*, cp311-*, cp312-*, cp313-*]
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
