--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -5,7 +5,7 @@ on: [push]
 env:
   CIBW_ARCHS_LINUX: auto
   CIBW_ARCHS_MACOS: x86_64 universal2
-  CIBW_BEFORE_BUILD: pip install cython==3.1.0
+  CIBW_BEFORE_BUILD: pip install cython
   CIBW_SKIP: pp* cp36-* cp37-* cp38-* *_i686 *-win32 *musllinux*
   CIBW_ENABLE: cpython-freethreading # Include free-threaded support
   CIBW_TEST_COMMAND: python -m amplpy.tests 
