--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
 variables:
   CIBW_SKIP: pp* cp27-* cp36-* cp37-* cp38-* *_i686 *-win32 *musllinux*
   CIBW_ARCHS_MACOS: x86_64 universal2
-  CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs ampl_module_gurobi pandas numpy nanoarrow pyarrow polars
-  CIBW_TEST_REQUIRES_AARCH64: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs nanoarrow pyarrow polars
+  CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs ampl_module_gurobi pandas numpy nanoarrow pyarrow==20.0.0 polars
+  CIBW_TEST_REQUIRES_AARCH64: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs nanoarrow pyarrow==20.0.0 polars
 
 stages:
 - stage: native
@@ -15,7 +15,7 @@ stages:
       - bash: |
           set -ex
           python dev/updatelib.py
-          python -m pip install setuptools cython==3.1.0
+          python -m pip install setuptools cython==3.1.0 nanoarrow
           python -m pip install .
           python setup.py sdist -d upload
           cd docs
