--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ stages:
       - bash: |
           set -ex
           python dev/updatelib.py
-          python -m pip install setuptools cython==3.1.0 nanoarrow
+          python -m pip install setuptools cython==3.1.0 nanoarrow pyarrow
           python -m pip install .
           python setup.py sdist -d upload
           cd docs
