--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
 variables:
   CIBW_SKIP: pp* cp27-* cp36-* cp37-* *_i686 *-win32 *musllinux*
   CIBW_ARCHS_MACOS: x86_64 universal2
-  CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs ampl_module_gurobi pandas numpy nanoarrow  "pyarrow==20.0.0; python_version>='3.9'" "pyarrow<18; python_version=='3.8' polars
-  CIBW_TEST_REQUIRES_AARCH64: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs nanoarrow  "pyarrow==20.0.0; python_version>='3.9'" "pyarrow<18; python_version=='3.8'  polars
+  CIBW_TEST_REQUIRES: "--index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs ampl_module_gurobi pandas numpy nanoarrow pyarrow==20.0.0; python_version>=\"3.9\" pyarrow<18; python_version==\"3.8\" polars"
+  CIBW_TEST_REQUIRES_AARCH64: "--index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple ampl_module_base ampl_module_highs nanoarrow pyarrow==20.0.0; python_version>=\"3.9\" pyarrow<18; python_version==\"3.8\" polars"
 
 stages:
 - stage: native
