fix all typehints mypy issues

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 ignore_missing_imports = True
-disable_error_code = attr-defined
+disable_error_code = attr-defined,misc
 exclude = ^amplpy/vendor/|^amplpy/tests|^amplpy/tests_camel|^examples/|^dev/|^docs/|setup.py|amplpy/utils.py
